--- a/Archimedes.Patterns.Services.WPF/WorkBenchServices/MessageBox/MessageBoxView.xaml
+++ b/Archimedes.Patterns.Services.WPF/WorkBenchServices/MessageBox/MessageBoxView.xaml
@@ -12,8 +12,10 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Button Grid.Row="1" Height="17" Command="{Binding Button1Command}" HorizontalAlignment="Center" Margin="10" VerticalAlignment="Center" Width="118">
-            <TextBlock Text="Ok"/>
+            <TextBlock Text="{Binding Button1, FallbackValue=Ok}"/>
         </Button>
-        <local:MessageBoxTextZoneView/>
+        <local:MessageBoxTextZoneView 
+            VerticalAlignment="Stretch"
+            HorizontalAlignment="Stretch"/>
     </Grid>
 </UserControl>
