--- a/AvalonDock/AvalonDock.Themes/Resources/ExpressionDark/UserControl.xaml
+++ b/AvalonDock/AvalonDock.Themes/Resources/ExpressionDark/UserControl.xaml
@@ -1,7 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="ExpressionDarkStyles.xaml"/>
+        <ResourceDictionary Source="Shared.xaml" />
     </ResourceDictionary.MergedDictionaries>
+
+
+    <Style TargetType="{x:Type UserControl}">
+        <Setter Property="Background" Value="{StaticResource ContentAreaBrushDark}" />
+    </Style>
+
 </ResourceDictionary>
