added DataGrid Style

--- a/AvalonDock/AvalonDock.Themes/Resources/ExpressionDark/Menue.xaml
+++ b/AvalonDock/AvalonDock.Themes/Resources/ExpressionDark/Menue.xaml
@@ -5,7 +5,7 @@
                     mc:Ignorable="d">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Shared.xaml" />
+        <ResourceDictionary Source="/AvalonDock.Themes;component/Resources/ExpressionDark/Shared.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <!-- SimpleStyles: Menu -->
