--- a/AvalonDock/AvalonDock.Themes/Resources/ExpressionDark/Button.xaml
+++ b/AvalonDock/AvalonDock.Themes/Resources/ExpressionDark/Button.xaml
@@ -3,9 +3,8 @@
 
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Shared.xaml" />
-        <ResourceDictionary Source="../BaseStyles.xaml" />
-        
+        <ResourceDictionary Source="/AvalonDock.Themes;component/Resources/ExpressionDark/Shared.xaml" />
+        <ResourceDictionary Source="/AvalonDock.Themes;component/Resources/BaseStyles.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
 
