--- a/AvalonDock/AvalonDock.Themes/Resources/ExpressionDark/ScrollBar.xaml
+++ b/AvalonDock/AvalonDock.Themes/Resources/ExpressionDark/ScrollBar.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Shared.xaml" />
+        <ResourceDictionary Source="/AvalonDock.Themes;component/Resources/ExpressionDark/Shared.xaml" />
     </ResourceDictionary.MergedDictionaries>
     <SolidColorBrush x:Key="ScrollBarLightBrush" Color="White"></SolidColorBrush>
 
