--- a/AvalonDock/AvalonDock.Themes/Resources/ExpressionDark/StatusBar.xaml
+++ b/AvalonDock/AvalonDock.Themes/Resources/ExpressionDark/StatusBar.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Shared.xaml" />
+        <ResourceDictionary Source="/AvalonDock.Themes;component/Resources/ExpressionDark/Shared.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <!--<SnippetStatusBar>-->
