--- a/AvalonDock/AvalonDock.Themes/Resources/ExpressionDark/ToolBar.xaml
+++ b/AvalonDock/AvalonDock.Themes/Resources/ExpressionDark/ToolBar.xaml
@@ -3,7 +3,7 @@
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Shared.xaml" />
+        <ResourceDictionary Source="/AvalonDock.Themes;component/Resources/ExpressionDark/Shared.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <!--<SnippetToolBar>-->
