--- a/AvalonDock/AvalonDock.Themes/Resources/ExpressionDark/UserControl.xaml
+++ b/AvalonDock/AvalonDock.Themes/Resources/ExpressionDark/UserControl.xaml
@@ -3,7 +3,7 @@
 
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Shared.xaml" />
+        <ResourceDictionary Source="/AvalonDock.Themes;component/Resources/ExpressionDark/Shared.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
 
