fixed title binding in WorkspaceViewModel <--> WorkbenchService <---> AvalonDock

--- a/AvalonDock/AvalonDock.Themes/Resources/BaseStyles.xaml
+++ b/AvalonDock/AvalonDock.Themes/Resources/BaseStyles.xaml
@@ -8,4 +8,8 @@
             Value="75" />
     </Style>
     
+    
+    <Style TargetType="TextBlock" x:Key="TextBlockBase">
+        
+    </Style>    
 </ResourceDictionary>
