--- a/Archimedes.Patterns.Services.WPF/WorkBenchServices/MessageBox/MessageBox2View.xaml
+++ b/Archimedes.Patterns.Services.WPF/WorkBenchServices/MessageBox/MessageBox2View.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:Archimedes.Services.WPF.WorkBenchServices.MessageBox"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="156" d:DesignWidth="433">
     
     <Grid>
         <Grid.RowDefinitions>
@@ -15,10 +15,10 @@
         <local:MessageBoxTextZoneView/>
 
         <Grid Grid.Row="1">
-            <Button  Height="17" Command="{Binding Button1Command}" HorizontalAlignment="Left" Margin="10" VerticalAlignment="Center" Width="100">
+            <Button  Height="17" Command="{Binding Button1Command}" IsDefault="True"  HorizontalAlignment="Left" Margin="10" VerticalAlignment="Center" Width="100">
                 <TextBlock Text="{Binding Button1}"/>
             </Button>
-            <Button  Height="17" Command="{Binding Button2Command}" HorizontalAlignment="Right" Margin="10" VerticalAlignment="Center" Width="100">
+            <Button  Height="17" Command="{Binding Button2Command}" IsCancel="True" HorizontalAlignment="Right" Margin="10" VerticalAlignment="Center" Width="100">
                 <TextBlock Text="{Binding Button2}"/>
             </Button>
         </Grid>
