--- a/Archimedes.Patterns.Services.WPF/WorkBenchServices/MessageBox/MessageBoxTextZoneView.xaml
+++ b/Archimedes.Patterns.Services.WPF/WorkBenchServices/MessageBox/MessageBoxTextZoneView.xaml
@@ -5,6 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="97" d:DesignWidth="416">
+    <UserControl.Resources>
+
+        <Style TargetType="TextBlock" BasedOn="{StaticResource TextBlockStyle}">
+        </Style>
+        
+    </UserControl.Resources>
 
     <Grid Margin="10" VerticalAlignment="Stretch" MaxWidth="{Binding MaxTextAeraWidth}" HorizontalAlignment="Stretch" >
         <Grid.RowDefinitions>
