--- a/Archimedes.Patterns.Services.WPF/WorkBenchServices/MessageBox/MessageBoxView.xaml
+++ b/Archimedes.Patterns.Services.WPF/WorkBenchServices/MessageBox/MessageBoxView.xaml
@@ -5,13 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Archimedes.Services.WPF.WorkBenchServices.MessageBox"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="158" d:DesignWidth="507">
 <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Button Grid.Row="1" Height="17" Command="{Binding Button1Command}" HorizontalAlignment="Center" Margin="10" VerticalAlignment="Center" Width="118">
+        <Button IsDefault="True" Grid.Row="1" Height="17" Command="{Binding Button1Command}" HorizontalAlignment="Center" Margin="10" VerticalAlignment="Center" Width="118">
             <TextBlock Text="{Binding Button1, FallbackValue=Ok}"/>
         </Button>
         <local:MessageBoxTextZoneView 
