--- a/Archimedes.Controls.WPF/Themes/Generic.xaml
+++ b/Archimedes.Controls.WPF/Themes/Generic.xaml
@@ -1,7 +1,16 @@
-﻿<ResourceDictionary
+<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:Archimedes.Controls.WPF">
+    xmlns:local="clr-namespace:Archimedes.Controls.WPF"
+    
+    xmlns:toolKitEx="clr-namespace:Microsoft.Windows.Controls;assembly=WPFToolkit.Extended"
+    xmlns:chrome="clr-namespace:Microsoft.Windows.Controls.Chromes;assembly=WPFToolkit.Extended"
+    xmlns:coreConverters="clr-namespace:Microsoft.Windows.Controls.Core.Converters;assembly=WPFToolkit.Extended"
+    >
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/WPFToolkit.Extended;component/TimePicker/Themes/Generic.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
+
     <Style TargetType="{x:Type local:ColorViewer}">
         <!--
         <Setter Property="Template">
@@ -18,5 +27,111 @@
             </Setter.Value>
         </Setter>
           -->
+    </Style>
+
+    <!-- =============================================================================== -->
+    <!-- ResourceDictionary for PeriodPicker and related controls                          -->
+    <!-- =============================================================================== -->
+    <coreConverters:InverseBoolConverter x:Key="InverseBoolConverter" />
+    <coreConverters:TimeFormatToDateTimeFormatConverter x:Key="TimeFormatToDateTimeFormatConverter" />
+
+    <DataTemplate x:Key="DefaultWatermarkTemplate">
+        <ContentControl Content="{Binding}" Foreground="Gray" Focusable="False" />
+    </DataTemplate>
+
+    <LinearGradientBrush x:Key="PopupDarkBorderBrush" EndPoint="0.5,1" StartPoint="0.5,0">
+        <GradientStop Color="#FFA3AEB9" Offset="0"/>
+        <GradientStop Color="#FF8399A9" Offset="0.375"/>
+        <GradientStop Color="#FF718597" Offset="0.375"/>
+        <GradientStop Color="#FF617584" Offset="1"/>
+    </LinearGradientBrush>
+
+    <LinearGradientBrush x:Key="PopupBackgroundBrush" StartPoint="0,0" EndPoint="0,1">
+        <LinearGradientBrush.GradientStops>
+            <GradientStopCollection>
+                <GradientStop Offset="0" Color="#FFffffff"/>
+                <GradientStop Offset="1" Color="#FFE8EBED"/>
+            </GradientStopCollection>
+        </LinearGradientBrush.GradientStops>
+    </LinearGradientBrush>
+    
+    <!--
+    <SolidColorBrush x:Key="ListItemHover" Color="#FFE7F5FD"/>
+
+    <Style x:Key="TimeItemStyle" TargetType="ListBoxItem">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ListBoxItem">
+                    <Border Name="Border" SnapsToDevicePixels="true">
+                        <ContentPresenter Margin="4" />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="Border" Property="Background" Value="{StaticResource ListItemHover}" />
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter TargetName="Border" Property="Background" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
+                            <Setter Property="Foreground" Value="White" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>-->
+
+    <!-- =============================================================================== -->
+    <!-- PeriodPicker                                                                      -->
+    <!-- =============================================================================== -->
+
+    <Style TargetType="{x:Type local:PeriodPicker}">
+        <Setter Property="WatermarkTemplate" Value="{StaticResource DefaultWatermarkTemplate}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:PeriodPicker}">
+                    <Border>
+                        <Grid>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+                                
+                                <!--<toolKitEx:DateTimeUpDown x:Name="PART_TimeUpDown" BorderThickness="1,1,0,1"  
+                                                      ContextMenu="{TemplateBinding ContextMenu}"
+                                                      AllowSpin="{TemplateBinding AllowSpin}"
+                                                      Format="{TemplateBinding Format, Converter={StaticResource TimeFormatToDateTimeFormatConverter}}"
+                                                      FormatString="{TemplateBinding FormatString}"
+                                                      ShowButtonSpinner="{TemplateBinding ShowButtonSpinner}"
+                                                      Value="{Binding Value, RelativeSource={RelativeSource TemplatedParent}}"
+                                                      Watermark="{TemplateBinding Watermark}"
+                                                      WatermarkTemplate="{TemplateBinding WatermarkTemplate}"/>-->
+                                
+                                <TextBox x:Name="PART_TimeUpDown" BorderThickness="1,1,0,1"  
+                                                      ContextMenu="{TemplateBinding ContextMenu}"
+                                                      Text="{Binding Value}" 
+                                                    />
+
+                                <!--, RelativeSource={RelativeSource TemplatedParent}-->
+
+                                <ToggleButton x:Name="_timePickerToggleButton" Grid.Column="1"
+                                              IsChecked="{Binding IsOpen, RelativeSource={RelativeSource TemplatedParent}}"
+                                              Style="{StaticResource TimePickerToggleButtonStyle}"
+                                              IsHitTestVisible="{Binding IsOpen, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource InverseBoolConverter}}"/>
+                            </Grid>
+                            <Popup IsOpen="{Binding IsChecked, ElementName=_timePickerToggleButton}" StaysOpen="False">
+                                <Border BorderThickness="1" Background="{StaticResource PopupBackgroundBrush}" 
+                                        BorderBrush="{StaticResource PopupDarkBorderBrush}" >
+                                    <Grid>
+                                        <ListBox x:Name="PART_TimeListItems" BorderThickness="0" Width="150" Height="130"
+                                                 DisplayMemberPath="Display"
+                                                 /> <!--ItemContainerStyle="{StaticResource TimeItemStyle}"-->
+                                    </Grid>
+                                </Border>
+                            </Popup>
+                        </Grid>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 </ResourceDictionary>
