--- a/Archimedes.Controls.WPF/Themes/Generic.xaml
+++ b/Archimedes.Controls.WPF/Themes/Generic.xaml
@@ -2,11 +2,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:Archimedes.Controls.WPF"
-    
-    xmlns:toolKitEx="clr-namespace:Microsoft.Windows.Controls;assembly=WPFToolkit.Extended"
-    xmlns:chrome="clr-namespace:Microsoft.Windows.Controls.Chromes;assembly=WPFToolkit.Extended"
-    xmlns:coreConverters="clr-namespace:Microsoft.Windows.Controls.Core.Converters;assembly=WPFToolkit.Extended"
+    xmlns:coreConverters="clr-namespace:Xceed.Wpf.Toolkit.Core.Converters;assembly=WPFToolkit.Extended"
     >
+    
+    <!--
+     xmlns:coreConverters="clr-namespace:Microsoft.Windows.Controls.Core.Converters;assembly=WPFToolkit.Extended"
+    -->
+    
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/WPFToolkit.Extended;component/TimePicker/Themes/Generic.xaml"/>
     </ResourceDictionary.MergedDictionaries>
@@ -55,29 +57,7 @@
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
     
-    <!--
-    <SolidColorBrush x:Key="ListItemHover" Color="#FFE7F5FD"/>
-
-    <Style x:Key="TimeItemStyle" TargetType="ListBoxItem">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="ListBoxItem">
-                    <Border Name="Border" SnapsToDevicePixels="true">
-                        <ContentPresenter Margin="4" />
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="Border" Property="Background" Value="{StaticResource ListItemHover}" />
-                        </Trigger>
-                        <Trigger Property="IsSelected" Value="True">
-                            <Setter TargetName="Border" Property="Background" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
-                            <Setter Property="Foreground" Value="White" />
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>-->
+    
 
     <!-- =============================================================================== -->
     <!-- PeriodPicker                                                                      -->
@@ -95,16 +75,7 @@
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
-                                
-                                <!--<toolKitEx:DateTimeUpDown x:Name="PART_TimeUpDown" BorderThickness="1,1,0,1"  
-                                                      ContextMenu="{TemplateBinding ContextMenu}"
-                                                      AllowSpin="{TemplateBinding AllowSpin}"
-                                                      Format="{TemplateBinding Format, Converter={StaticResource TimeFormatToDateTimeFormatConverter}}"
-                                                      FormatString="{TemplateBinding FormatString}"
-                                                      ShowButtonSpinner="{TemplateBinding ShowButtonSpinner}"
-                                                      Value="{Binding Value, RelativeSource={RelativeSource TemplatedParent}}"
-                                                      Watermark="{TemplateBinding Watermark}"
-                                                      WatermarkTemplate="{TemplateBinding WatermarkTemplate}"/>-->
+                               
                                 
                                 <TextBox x:Name="PART_TimeUpDown" BorderThickness="1,1,0,1"  
                                                       ContextMenu="{TemplateBinding ContextMenu}"
