--- a/Archimedes.Controls.WPF/Themes/Generic.xaml
+++ b/Archimedes.Controls.WPF/Themes/Generic.xaml
@@ -2,8 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:Archimedes.Controls.WPF"
-    xmlns:coreConverters="clr-namespace:Xceed.Wpf.Toolkit.Core.Converters;assembly=WPFToolkit.Extended"
-    >
+    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
     
     <!--
      xmlns:coreConverters="clr-namespace:Microsoft.Windows.Controls.Core.Converters;assembly=WPFToolkit.Extended"
@@ -34,8 +33,8 @@
     <!-- =============================================================================== -->
     <!-- ResourceDictionary for PeriodPicker and related controls                          -->
     <!-- =============================================================================== -->
-    <coreConverters:InverseBoolConverter x:Key="InverseBoolConverter" />
-    <coreConverters:TimeFormatToDateTimeFormatConverter x:Key="TimeFormatToDateTimeFormatConverter" />
+    <xctk:InverseBoolConverter x:Key="InverseBoolConverter" />
+    <xctk:TimeFormatToDateTimeFormatConverter x:Key="TimeFormatToDateTimeFormatConverter" />
 
     <DataTemplate x:Key="DefaultWatermarkTemplate">
         <ContentControl Content="{Binding}" Foreground="Gray" Focusable="False" />
