--- a/Archimedes.Tests/MainWindow.xaml
+++ b/Archimedes.Tests/MainWindow.xaml
@@ -1,9 +1,10 @@
 ﻿<Window x:Class="Archimedes.Tests.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525" xmlns:my="clr-namespace:Archimedes.Controls.WPF;assembly=Archimedes.Controls.WPF">
+        xmlns:wpf="clr-namespace:Archimedes.Controls.WPF;assembly=Archimedes.Controls.WPF"
+        Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <my:ColorViewer 
+        <wpf:ColorViewer 
             Height="147" 
             HorizontalAlignment="Left" 
             Margin="148,37,0,0" 
@@ -11,7 +12,7 @@
             
             VerticalAlignment="Top" Width="148">
 
-            <my:ColorViewer.SectorBrushes>
+            <wpf:ColorViewer.SectorBrushes>
 
                 <SolidColorBrush Color="YellowGreen"/>
                 <!--
@@ -23,7 +24,7 @@
                 <SolidColorBrush Color="Green"/>
                 
                 -->
-             </my:ColorViewer.SectorBrushes>
-        </my:ColorViewer>
+             </wpf:ColorViewer.SectorBrushes>
+        </wpf:ColorViewer>
     </Grid>
 </Window>
